// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DocuAtomPasswordCheckList Snapshots should match snapshot 1`] = `
<div
  data-testid="password-checklist"
>
  <div>
    minLength: 8
  </div>
  <div>
    Rules: minLength, specialChar, number, capital, match
  </div>
  <div>
    Value: password
  </div>
  <div>
    ValueAgain: password
  </div>
  <div>
    Valid: true
  </div>
</div>
`;

exports[`DocuAtomPasswordCheckList Snapshots should match snapshot with valid password 1`] = `
<div
  data-testid="password-checklist"
>
  <div>
    minLength: 8
  </div>
  <div>
    Rules: minLength, specialChar, number, capital, match
  </div>
  <div>
    Value: ValidPassword123!
  </div>
  <div>
    ValueAgain: ValidPassword123!
  </div>
  <div>
    Valid: true
  </div>
</div>
`;
